--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,25 @@
       <a class="btn btn-primary btn-lg mt-4" href="/notes" role="button">Get Started</a>
     </div>
   </div>
-  <script src="/assets/js/index.js"></script>
+
+  <h1>HELLO EXPRESS</h1>
+  <a href="./notes">NOTES</a>
+/////////////////////////////  PRACTICE you might need this
+  <!-- <select>
+    <option value="">NO VALUE</option>
+    <option value="aardvark">aardvark</option>
+    <option value="turtle">turtle</option>
+    <option value="monkey">monkey</option>
+    <option value="bird">bird</option>
+  </select>
+
+  <div id="animals-container"></div>
+
+ 
+  <script src="./assets/js/index.js"></script>
+
+
+
 </body>
 
-</html>
+</html> -->
