--- a/public/notes.html
+++ b/public/notes.html
@@ -44,6 +44,10 @@
         </div>
       </div>
     </div>
-    <script src="/assets/js/index.js"></script>
+    <h1>EXISTING NOTES</h1>
+    <!-- <a href="/">RETURN TO HOME</a> -->
+    <!-- <script src="/assets/js/index.js"></script> -->
+
+
   </body>
 </html>
