text and title take input, save button works,some routes work

--- a/public/index.html
+++ b/public/index.html
@@ -23,23 +23,15 @@
   </div>
 
   <h1>HELLO EXPRESS</h1>
-  <a href="./notes">NOTES</a>
+  <a href="./notes">NOTES PAGE</a>
 /////////////////////////////  PRACTICE you might need this
-  <!-- <select>
-    <option value="">NO VALUE</option>
-    <option value="aardvark">aardvark</option>
-    <option value="turtle">turtle</option>
-    <option value="monkey">monkey</option>
-    <option value="bird">bird</option>
-  </select>
 
-  <div id="animals-container"></div>
 
  
-  <script src="./assets/js/index.js"></script>
+  <script src="index.js"></script>
 
 
 
 </body>
 
-</html> -->
+</html> 
