--- a/public/notes.html
+++ b/public/notes.html
@@ -15,7 +15,7 @@
       integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/assets/css/styles.css" />
+    <link rel="stylesheet" href="styles.css" />
   </head>
 
   <body>
@@ -45,8 +45,8 @@
       </div>
     </div>
     <h1>EXISTING NOTES</h1>
-    <!-- <a href="/">RETURN TO HOME</a> -->
-    <!-- <script src="/assets/js/index.js"></script> -->
+    <a href="/">RETURN TO HOME</a> -->
+     <script src="notes.js"></script>
 
 
   </body>
