--- a/public/notes.html
+++ b/public/notes.html
@@ -30,6 +30,7 @@
       <div class="row">
         <div class="col-4 list-container">
           <div class="card">
+            <h1>EXISTING NOTES</h1>
             <ul class="list-group"></ul>
           </div>
         </div>
