--- a/public/notes.html
+++ b/public/notes.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/bootswatch/4.1.3/flatly/bootstrap.min.css"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
@@ -29,8 +30,8 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-4 list-container">
+          <h1>EXISTING NOTES</h1>
           <div class="card">
-            <h1>EXISTING NOTES</h1>
             <ul class="list-group"></ul>
           </div>
         </div>
@@ -45,9 +46,9 @@
         </div>
       </div>
     </div>
-    <h1>EXISTING NOTES</h1>
-    <a href="/">RETURN TO HOME</a> -->
-     <script src="notes.js"></script>
+   
+     <!-- <a href="/">RETURN TO HOME</a>  -->
+     <script src="notes.js"></script> 
 
 
   </body>
