just cant get delete to work

--- a/public/notes.html
+++ b/public/notes.html
@@ -48,7 +48,7 @@
     </div>
    
      <!-- <a href="/">RETURN TO HOME</a>  -->
-     <script src="notes.js"></script> 
+     <script src="index.js"></script> 
 
 
   </body>
